<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user_id"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user_first_name"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user_last_name"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_insert_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_insert_all"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_select_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_result_select"
            android:textSize="30sp" />

    </ScrollView>


    <Button
        android:id="@+id/btn_select_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_select_id"
        android:textSize="30sp" />


</LinearLayout>